# Railway-Manager

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  README.pl.md  THIRD_PARTY_NOTICES.md
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/Editor/: FleetCatalogMigrator.cs  FontFallbackSetup.cs  IconMaskTool.cs  SvgToPngBaker.cs  TimetableDiagnoseMenu.cs  UrpMaterialFixup.cs
Assets/Materials/: BuildingMaterial.mat  DepotGroundRealistic 1.mat  DepotGroundRealistic.mat  ForestMaterial.mat  GroundMaterial.mat  HighwayMaterial.mat  IndustrialMaterial.mat  LushGrassGround 1.mat  LushGrassGround.mat  LushGrass_Light.mat  MilitaryMaterial.mat  PlatformMaterial.mat  Podsypka_material.mat  PoiMaterial.mat  RailwayMaterial.mat  RoadTexture.mat  UrbanGround_Background.mat  UrbanRoad.mat  WaterMaterial.mat
Assets/Models/: Background_Horizon.prefab  Background_Urban_Horizon.prefab  BarrierGate.prefab  BarrierGate_LowPoly 1.prefab  BarrierGate_LowPoly.prefab  Barrier_Final_V2.prefab  Barrier_Final_V3.prefab  Building_Apartment 1.prefab  Building_Apartment.prefab  Building_Office.prefab  Building_Warehouse.prefab  FenceSection.prefab  FenceSection_LowPoly 1.prefab  FenceSection_LowPoly.prefab  Fence_Final_V2.prefab  Fence_Tileable.prefab  README.md  Urban_Skyline_Backdrop.prefab
Assets/Models/Background_Horizon_Assets/: selected.glb
Assets/Models/Background_Urban_Horizon_Assets/: selected.glb
Assets/Scenes/: GameCreator.unity  MainMenu.unity  MapScene.unity
Assets/Settings/: InputActions.inputactions
Assets/StreamingAssets/: Credits.txt
Assets/URPDefaultResources/: High.asset  Low.asset  Medium.asset  Ultra.asset  Very High.asset  Very Low.asset
BlenderSource/Trackwork/: Rail.fbx  Sleeper.fbx
BlenderSource/scripts/: analyze_ref_grass.py  bake_ballast.py  bake_grass.py  bake_grass_shader.py  bake_rail.py  bake_sleeper.py  calc_basecolor.py  gen_ballast.py  gen_rail.py  gen_sleeper.py  make_grass_normal.py  make_grass_seamless.py  match_grass_color.py  render_grass_blades.py  render_grass_flat.py  render_grass_shader.py  render_ingame.py  render_sleeper.py  render_terrain.py  render_track.py
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  Physics.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset
RailwayManager/: CMakeLists.txt
RailwayManager/data/stock/: new_stock.json
RailwayManager/src/: main.cpp
RailwayManager/src/core/: Game.cpp  Game.h  GameState.cpp  GameState.h  SaveManager.cpp  SaveManager.h
RailwayManager/src/data/: CSVLoader.cpp  CSVLoader.h  DataLoader.cpp  DataLoader.h  JSONLoader.cpp  JSONLoader.h
RailwayManager/src/map/: MapRenderer.cpp  MapRenderer.h
RailwayManager/src/models/: Event.cpp  Event.h  Line.cpp  Line.h  Personnel.cpp  Personnel.h  Station.cpp  Station.h  Timetable.cpp  Timetable.h  Train.cpp  Train.h
RailwayManager/src/simulation/: SimulationEngine.cpp  SimulationEngine.h
RailwayManager/src/ui/: Dashboard.cpp  Dashboard.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  TimetableEditor.cpp  TimetableEditor.h
RailwayManager/src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
docs/: BUGS.md  DATA_LICENSES.md  QA_REGRESSION_MATRIX.md  RELEASE_RUNBOOK.md  TECH_DEBT.md  TESTING.md  TROUBLESHOOTING.md  conventions.md  input-audit.md
docs/adr/: 0001-union-find-pathfinding.md  0002-signal-block-system.md  0003-new-input-system.md  0004-circulations-before-movement.md  README.md
docs/depot/: README.md
docs/design/: asset-creation-guide.md  asset-needs-by-system.md  asset-pipeline.md  balance-constants.md  country-dlc-map-packages.md  data-formats.md  depot-3d.md  depot-visual-direction.md  determinism-checklist.md  dispatch-predictive.md  dlc-multi-country.md  fleet-catalog-ea.md  game-creator.md  icon-checklist.md  icon-prompts.json  icon-sprite-atlas.md  m-timetableux-recon.md  m10-multiplayer.md  m13-settings-saveload.md  m6-5-economy-research.md  m6-economy.md  m7-maintenance.md  m8-personnel.md  m9c-handshake.md  performance-baseline.md  performance-decision-log.md  performance-targets.md  system-interactions.md  visual-style-guide.md
docs/setup/: git-smartmerge.md
tools/: run-tests.ps1
(+1001 files in other folders)
